tests/ui/attributes/invalid_macro_export_argument.deny.stderr
error: `#[macro_export]` can only take 1 or 0 arguments
  --> $DIR/invalid_macro_export_argument.rs:7:1
   |
LL | #[macro_export(hello, world)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/invalid_macro_export_argument.rs:4:24
   |
LL | #![cfg_attr(deny, deny(invalid_macro_export_arguments))]
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid `#[macro_export]` argument
  --> $DIR/invalid_macro_export_argument.rs:13:16
   |
LL | #[macro_export(not_local_inner_macros)]
   |                ^^^^^^^^^^^^^^^^^^^^^^

error: invalid `#[macro_export]` argument
  --> $DIR/invalid_macro_export_argument.rs:33:16
   |
LL | #[macro_export("blah")]
   |                ^^^^^^

error: aborting due to 3 previous errors

